--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "joi": "^14.1.0",
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
-    "sequelize": "^4.41.2",
+    "sequelize": "4.8.0",
     "sqlite3": "^4.0.4"
   },
   "devDependencies": {
