--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@vue/composition-api": "^0.5.0",
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "vue": "^2.5.2",
@@ -77,6 +78,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "prettier": "2.0.5",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
